--- a/bitcoin/issues/31882/bitcoin.conf
+++ b/bitcoin/issues/31882/bitcoin.conf
@@ -29,7 +29,7 @@ rpcport=8332               # Default RPC port
 # --------------------------
 
 # logtimestamps=1
-#debug=1
+debug=0
 
 # --------------------------
 # Pruning (saves disk space)
