--- a/bitcoin/issues/31882/bitcoin.conf
+++ b/bitcoin/issues/31882/bitcoin.conf
@@ -5,7 +5,7 @@
 # --------------------------
 
 server=1                   # Enable RPC server
-daemon=1                   # Run as daemon (Linux/Unix)
+daemon=0                   # Run as daemon (Linux/Unix), pprof will not work correctly
 pid=/Users/tnnd/tmp/bitcoin_data/bitcoind.pid
 #txindex=0                  # Disable transaction index (saves space)
 datadir=/Users/tnnd/tmp/bitcoin_data
